--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loopstudios-lp",
   "version": "0.1.0",
-  "homepage": "https://livinglifemeaning.github.io/LoopstudiosLP/",
+  "homepage": "https://livinglifemeaning.github.io/LoopstudiosLp/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
